--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="contenedor-trabajos">
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/1.jpg" width="500"   alt="Desarrollo Web">
+							<img src="img/trabajos/1.jpg" width="500"   alt="Desarrollos Web">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Desarrollo Web</p>
