--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
 					<input class="boton" type="submit" value="Enviar">
 				</form>
 			</section>
+			<section class="redes-sociales">
+				<div class="contenedor">
+					<a class="twitter" href="https://twitter.com/Alejand53608840" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a class="facebook" href="https://www.facebook.com/fabiola.lopezrodriguez.17/" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a class="github" href="https://github.com/Fabiola08" target="_blank"><i class="fa fa-github"></i></a>
+					<a class="instagram" href="https://www.instagram.com/ale.rod04/" target="_blank"><i class="fa fa-instagram"></i></a>
+				</div>
+			</section>
 	</footer>
 </body>
 </html>
